Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28663

Example audiorecorder does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.0 Beta 1
    • 5.0.0
    • Multimedia
    • None
    • Installer 386 Mac

      The example opens and when clicking on "record" button it says:
      " can't open source, failed"

      application output shows:
      "QFileDevice:seek: IODevice is not open"

      I can record some sound using the MultimedieWidgets/camera example so the micro is available and working.

        For Gerrit Dashboard: QTBUG-28663
        # Subject Branch Project Status CR V

            janichol Andy Nichols
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes