examples/multimedia/audiorecorder/audiorecorder.h
@@ -71,7 +71,6 @@ private slots:
     void updateState(QMediaRecorder::State);
     void updateProgress(qint64 pos);
     void displayErrorMessage();
-    QUrl generateAudioFilePath();
 
 private:
     Ui::AudioRecorder *ui;
